objects/AMASellingSupportExpense__c.object
<CustomObject>
    <description>Reimbursement Record (Parent of all Reimbursement Request Line Items)</description>
    <fields>
        <fullName>AMABalanceFF__c</fullName>
        <description>Selling Support Program Year Available Balance</description>
        <formula>Selling_Support_Program_Year__r.Available_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Selling Support Program Year available balance</inlineHelpText>
        <label>Selling Support Year Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMASellingSupportAdjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated value that is populated on the Parent Account for AMA credits and debits.</description>
        <inlineHelpText>Calculated value that is populated on the Parent Account for AMA credits and debits.</inlineHelpText>
        <label>Calculated Parent AR Credit/Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <description>Account External ID of the Parent Account Record</description>
        <formula>UltimateParentAR__r.Account_External_ID_JDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number</description>
        <formula>DealerAccount__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>External status (dealer facing) for Reimbursement Request parent record</description>
        <inlineHelpText>Status of the Reimbursement Request</inlineHelpText>
        <label>Status (dealer facing)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                    <default>true</default>
                    <label>Saved</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete - Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Complete - Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Complete - Not Paid</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Line_Item_Count__c</fullName>
        <description>Count of Line Item Approval Status as Approved</description>
        <label>Approved Line Item Count</label>
        <summaryFilterItems>
            <field>AMASellingSupportExpenseLineItem__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Sales Manager (Salesforce User) - used for the AMA Selling Support Expense Approval Process</description>
        <inlineHelpText>Area Sales Manager (Salesforce User) -  used for the AMA Selling Support Expense Approval Process</inlineHelpText>
        <label>Area Sales Manager (BB Approver)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMA_Selling_Support_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Bill To/Sold To Account selected for this Reimbursement Request</description>
        <inlineHelpText>The Bill To/Sold To Account selected for this Reimbursement Request</inlineHelpText>
        <label>Bill-To Account to be Credited</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2 AND 3) OR 4) OR 5</booleanFilter>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.DealerAccount__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Billing_Address_Type_JDE__c</field>
                <operation>equals</operation>
                <value>X - Active Parent/Child Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.BillTo_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.DealerAccount__c</field>
                <operation>equals</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.DealerAccount__c</field>
                <operation>notEqual</operation>
                <value>Bill-To Account to be Credited: Account ID</value>
            </filterItems>
            <infoMessage>Limited to Accounts where the Dealer Account is the Parent AR, is an Active account and is specified as Bill To.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reimbursement Requests (Bill-To/Sold-To Account)</relationshipLabel>
        <relationshipName>Reimbursement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_Account_to_be_Credited__c</fullName>
        <formula>Bill_To_Sold_To_Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Account # to be Credited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Builder_Program_Year_ID__c</fullName>
        <description>ID of the Business Builder Program Year</description>
        <formula>CASESAFEID(Selling_Support_Program_Year__r.BusinessBuilderProgramYear__c)</formula>
        <label>Business Builder Program Year ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloneExpensefromCreatedByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Id of the user that created the original Reimbursement Request</description>
        <inlineHelpText>User Id of the user that created the original Reimbursement Request</inlineHelpText>
        <label>Clone Expense from Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reimbursement_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloned_Expense_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the Reimbursement Request ID of Parent Reimbursement Request from which the line items set to &apos;rework&apos; originated.</description>
        <inlineHelpText>Original Reimbursement Request Id of Parent Reimbursement Request from which the line items set to &apos;rework&apos; originated.</inlineHelpText>
        <label>Cloned Expense From</label>
        <referenceTo>AMASellingSupportExpense__c</referenceTo>
        <relationshipLabel>Reimbursement Requests</relationshipLabel>
        <relationshipName>Reimbursement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditMemo__c</fullName>
        <description>Credit memo provided by Sales Operations (Iris) after final approval</description>
        <inlineHelpText>Upon final approval a credit memo will be provided by Sales Operations</inlineHelpText>
        <label>Credit Memo #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentApproverDelegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delegated Approver of the Current Approver</description>
        <inlineHelpText>Delegated Approver of the Current Approver</inlineHelpText>
        <label>Current Approver Delegate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reimbursement_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that is the current approver based on the Approval Process</description>
        <inlineHelpText>User that is the current approver based on the Approval Process</inlineHelpText>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reimbursement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsApproverDelegate__c</fullName>
        <description>Determines if the logged in User is the same as the user listed as the Approver Delegate</description>
        <formula>IF( CurrentApproverDelegate__c = $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Is Approver Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsApprover__c</fullName>
        <description>Determines if the logged in User is the same as the user listed as the Current Approver</description>
        <formula>IF(CurrentApprover__c = $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Is Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DealerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for the Dealer Community User</description>
        <inlineHelpText>Account for the Dealer Community User. Dealer Account must be &apos;Enrolled&apos; in a Selling Support Program Year to create Reimbursement Request.</inlineHelpText>
        <label>Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reimbursement Requests (Dealer Account)</relationshipLabel>
        <relationshipName>Expenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Account_ID__c</fullName>
        <description>Dealer Account ID - used for appending links in emails</description>
        <formula>CASESAFEID(DealerAccount__c)</formula>
        <label>Dealer Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Reimbursement Request (as Dealer) or balance adjustment (as Sales Operations) description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Reimbursement Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
                <value>
                    <fullName>Events and Marketing</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Trials</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; wearable costs</fullName>
                    <isActive>false</isActive>
                    <label>Advertising &amp; wearable costs</label>
                </value>
                <value>
                    <fullName>Employee training expenses</fullName>
                    <isActive>false</isActive>
                    <label>Employee training expenses</label>
                </value>
                <value>
                    <fullName>Feed Trials</fullName>
                    <isActive>false</isActive>
                    <label>Feed Trials</label>
                </value>
                <value>
                    <fullName>Local - Event expenses</fullName>
                    <isActive>false</isActive>
                    <label>Local - Event expenses</label>
                </value>
                <value>
                    <fullName>Local - Event materials</fullName>
                    <isActive>false</isActive>
                    <label>Local - Event materials</label>
                </value>
                <value>
                    <fullName>Training &amp; VIP trip expenses</fullName>
                    <isActive>false</isActive>
                    <label>Training &amp; VIP trip expenses</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Sub_category__c</fullName>
        <label>Reimbursement Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Expense_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adv and Mktg Agency Fees 2017</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Advertising and Marketing Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Animal Care Workshop</fullName>
                </value>
                <value>
                    <fullName>Branded Wearables and Premiums</fullName>
                </value>
                <value>
                    <fullName>Branded Wearables and Premiums 2017</fullName>
                </value>
                <value>
                    <fullName>Calf &amp; Heifer VIP</fullName>
                </value>
                <value>
                    <fullName>Cattle Mineral Meeting</fullName>
                </value>
                <value>
                    <fullName>Check-R-Board Days</fullName>
                </value>
                <value>
                    <fullName>Chick Days</fullName>
                </value>
                <value>
                    <fullName>COW Cattle Owners Workshop</fullName>
                </value>
                <value>
                    <fullName>Customer Appreciation Event</fullName>
                </value>
                <value>
                    <fullName>Dairy/Beef Cattle Vet Conference</fullName>
                </value>
                <value>
                    <fullName>Dealer Differentiation Conference</fullName>
                </value>
                <value>
                    <fullName>Dealer Signage</fullName>
                </value>
                <value>
                    <fullName>eStore Merchandising Kits</fullName>
                </value>
                <value>
                    <fullName>Farm/Ranch Selling Events</fullName>
                </value>
                <value>
                    <fullName>FEED / HERD Sales Training</fullName>
                </value>
                <value>
                    <fullName>Feeding Trial</fullName>
                </value>
                <value>
                    <fullName>Feedlot Cattle VIP</fullName>
                </value>
                <value>
                    <fullName>Flocktober</fullName>
                </value>
                <value>
                    <fullName>Genetic Supplier VIP</fullName>
                </value>
                <value>
                    <fullName>Great Starts</fullName>
                </value>
                <value>
                    <fullName>Horse VIP</fullName>
                </value>
                <value>
                    <fullName>HOW Horse Owners Workshop</fullName>
                </value>
                <value>
                    <fullName>Mega Calf &amp; Heifer VIP</fullName>
                </value>
                <value>
                    <fullName>Mega Cattle VIP</fullName>
                </value>
                <value>
                    <fullName>Pet Employee Feed Trial</fullName>
                </value>
                <value>
                    <fullName>Pet Food Samples</fullName>
                </value>
                <value>
                    <fullName>PMI Employee Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Status__c</fullName>
        <description>Internal Approval Process status - related to dealer facing &apos;Status&apos;</description>
        <inlineHelpText>Internal Approval Process status - related to dealer facing &apos;Status&apos;</inlineHelpText>
        <label>Status (internal)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ApprovalStatus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved by Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>Approved by Area Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Approved Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Complete - Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Complete - Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Complete - Not Paid</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Rejected by Area Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Rejected by Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Rejected by Sales Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineItemsRejectionValidation__c</fullName>
        <description>Checks whether all or some of Line Items were rejected. Used in Approval Processes.</description>
        <formula>IF(Line_Item_Count__c = Rejected_Line_Item_Count__c, &apos;all&apos;,
 IF(Rejected_Line_Item_Count__c &gt; 0 &amp;&amp;  Approved_Line_Item_Count__c &gt; 0, &apos;some&apos;, &apos;none&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether all or some of Line Items were rejected. Used in Approval Processes.</inlineHelpText>
        <label>Line Items Rejection Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <description>Number of Lines Items on the Reimbursement Requests</description>
        <label>Line Item Count</label>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <description>Sum of Total_Spend__c for all Line Items</description>
        <inlineHelpText>Sum of Total_Spend__c for all Line Items</inlineHelpText>
        <label>Line Item Total</label>
        <summarizedField>AMASellingSupportExpenseLineItem__c.ExpenseAmount__c</summarizedField>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Rework_Items__c</fullName>
        <description>The number of Line Items that have the status of &apos;Rework&apos;</description>
        <label>Number of Rework Items</label>
        <summaryFilterItems>
            <field>AMASellingSupportExpenseLineItem__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rework</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reassigned_Approver__c</fullName>
        <description>To be deleted</description>
        <label>Reassigned Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <description>Record Type ID used for Data Loader</description>
        <formula>RecordTypeId</formula>
        <inlineHelpText>Record Type ID used for Data Loader</inlineHelpText>
        <label>Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>WILL BE REMOVED -  SEE JIRA: LPDCR-628</description>
        <inlineHelpText>Calculated based on sub-category WILL BE REMOVED FROM PARENT-  SEE JIRA: LPDCR-628</inlineHelpText>
        <label>Reimbursement Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rejected_Line_Item_Count__c</fullName>
        <description>Number of Reimbursement Request Line Items that have a Line Item Approval Status of &apos;Rework&apos;</description>
        <label>Rejected Line Item Count</label>
        <summaryFilterItems>
            <field>AMASellingSupportExpenseLineItem__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rework</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesOperationsBalanceAdjustment__c</fullName>
        <description>Used by Sales Operations to increase or reduce AMA Selling Support balances</description>
        <inlineHelpText>Used by Sales Operations to increase or reduce AMA Selling Support balances</inlineHelpText>
        <label>Sales Operations Balance Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Representative (Salesforce User) - used for the Reimbursement Request Approval Process</description>
        <inlineHelpText>Sales Representative (Salesforce User) - used for the Reimbursement Approval Process</inlineHelpText>
        <label>Sales Specialist (BB Approver)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMA_Selling_Support_Expenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Support_Program_Year__c</fullName>
        <description>Selling Support Program Year Name</description>
        <inlineHelpText>The Selling Support Program Year and balance this Reimbursement Request record is being submitted against. Dealer Account must be Enrolled in a Selling Support Program Year to create Reimbursement Request.</inlineHelpText>
        <label>Selling Support Program Year</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>SellingSupportProgramYear__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.DealerAccount__c</valueField>
            </filterItems>
            <filterItems>
                <field>SellingSupportProgramYear__c.BusinessBuilderProgramStatus__c</field>
                <operation>equals</operation>
                <value>Enrolled</value>
            </filterItems>
            <infoMessage>Dealer Account&apos;s Selling Support Program Year must be &apos;Enrolled&apos; in order to create Reimbursement Request.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SellingSupportProgramYear__c</referenceTo>
        <relationshipLabel>Reimbursement Requests</relationshipLabel>
        <relationshipName>Reimbursement_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_Date__c</fullName>
        <description>Field to capture date and time when the record is Submitted for Approval - used with the Auto Approval (after 7 days) process.</description>
        <inlineHelpText>Date this Reimbursement Request record was submitted for approval.</inlineHelpText>
        <label>Submitted for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Pending__c</fullName>
        <description>Rollup of Line Items &apos;In Progress&apos; or &apos;Submitted for Approval&apos;</description>
        <inlineHelpText>Rollup of Line Items &apos;In Progress&apos; or &apos;Submitted for Approval&apos;</inlineHelpText>
        <label>Pending Line Item Total</label>
        <summarizedField>AMASellingSupportExpenseLineItem__c.ExpenseAmount__c</summarizedField>
        <summaryFilterItems>
            <field>AMASellingSupportExpenseLineItem__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval, In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Rollup Summary of Expense Line Items.</description>
        <inlineHelpText>Rollup Summary of Expense Line Items.</inlineHelpText>
        <label>Approved Line Item Total</label>
        <summarizedField>AMASellingSupportExpenseLineItem__c.ExpenseAmount__c</summarizedField>
        <summaryFilterItems>
            <field>AMASellingSupportExpenseLineItem__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpenseLineItem__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Reimbursement Request</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Balance Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UltimateParentAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master-Detail lookup to the Parent AR record for this expense.</description>
        <inlineHelpText>Master-Detail lookup to the Parent AR record for this expense.</inlineHelpText>
        <label>(to be deleted) Parent AR</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reimbursement Requests (Ultimate Parent AR)</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Reimbursement_Request_ID__c</fullName>
        <description>18 Digit ID of the Reimbursement Request</description>
        <formula>CASESAFEID(Id)</formula>
        <label>18 Digit Reimbursement Request ID</label>
        <type>Text</type>
    </fields>
    <label>Reimbursement Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DealerAccount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UltimateParentAR__c</columns>
        <columns>Total__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Internal_Status__c</columns>
        <columns>Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyPendingApprovals</fullName>
        <columns>NAME</columns>
        <columns>DealerAccount__c</columns>
        <columns>Bill_To_Sold_To_Account__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Cloned_Expense_From__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUserIsApprover__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Internal_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete - Paid in Full,Complete - Partially Paid,Complete - Not Paid</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AMASellingSupportExpense__c.Reimbursement_Request</value>
        </filters>
        <label>My Pending Approvals</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_for_Bill_Shine</fullName>
        <columns>Submitted_for_Approval_Date__c</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>DealerAccount__c</columns>
        <columns>Total_Pending__c</columns>
        <columns>Area_Sales_Manager__c</columns>
        <columns>Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Sales Specialist</value>
        </filters>
        <filters>
            <field>Area_Sales_Manager__c</field>
            <operation>contains</operation>
            <value>Shine</value>
        </filters>
        <label>Open Requests for Bill Shine</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_for_Brad_Fest</fullName>
        <columns>Submitted_for_Approval_Date__c</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>DealerAccount__c</columns>
        <columns>Total_Pending__c</columns>
        <columns>Area_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Sales Specialist</value>
        </filters>
        <filters>
            <field>Area_Sales_Manager__c</field>
            <operation>contains</operation>
            <value>Fest</value>
        </filters>
        <label>Open Requests for Brad Fest</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_for_Brad_Fletcher</fullName>
        <columns>Submitted_for_Approval_Date__c</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>DealerAccount__c</columns>
        <columns>Total_Pending__c</columns>
        <columns>Area_Sales_Manager__c</columns>
        <columns>Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Sales Specialist</value>
        </filters>
        <filters>
            <field>Area_Sales_Manager__c</field>
            <operation>contains</operation>
            <value>Fletcher</value>
        </filters>
        <label>Open Requests for Brad Fletcher</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_for_Daniel_Klema</fullName>
        <columns>Submitted_for_Approval_Date__c</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>DealerAccount__c</columns>
        <columns>Total_Pending__c</columns>
        <columns>Area_Sales_Manager__c</columns>
        <columns>Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Sales Specialist</value>
        </filters>
        <filters>
            <field>Area_Sales_Manager__c</field>
            <operation>contains</operation>
            <value>Klema</value>
        </filters>
        <label>Open Requests for Daniel Klema</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_for_David_Moore</fullName>
        <columns>Submitted_for_Approval_Date__c</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>DealerAccount__c</columns>
        <columns>Total_Pending__c</columns>
        <columns>Area_Sales_Manager__c</columns>
        <columns>Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Sales Specialist</value>
        </filters>
        <filters>
            <field>Area_Sales_Manager__c</field>
            <operation>contains</operation>
            <value>Moore</value>
        </filters>
        <label>Open Requests for David Moore</label>
    </listViews>
</CustomObject>